<resources>
    <string name="app_name">Comptabilite</string>
    <string name="welcom">Server</string>
    <string name="ipserver" />
    <string name="bouton_acceuiul">Suivant</string>
    <string name="userlogin">Utilisateur</string>
    <string name="pass_user">Mot de passe</string>
    <string name="user_name" />
    <string name="string_password" />
    <string name="button_login">CONNEXION</string>
    <string name="menu_acceuil">ACCEUIL</string>
    <string name="jnaux_saisir">JOURNAUX DE SAISIE</string>
    <string name="getion_erreur">GESTION DES ERREURS</string>
    <string name="gstion_erreur">GESTION DES ERREURS</string>
    <string name="code_journaux">Journal</string>
    <string name="type_op">Type opération</string>
    <string name="string_tier">Tiers</string>
    <string name="cpt_tier">N°cpte tiers</string>
    <string name="cpte">Compte</string>
    <string name="cpte_tiers">Tiers</string>
    <string name="num_copte_tiers">N°cpte tiers</string>
    <string name="cpte_contrepartie">Compte</string>
    <string name="bt_annuler">ANNULER</string>
    <string name="bt_suivant">SUIVANT</string>
    <string name="date">Date</string>
    <string name="lib_op">Libellé opération</string>
    <string name="montant_op">Montant</string>
    <string name="num_piece">N° pièce</string>
    <string name="numerisation">NUMERISER</string>
    <string name="reference_doc">Réference</string>
    <string name="num_facture">N°facture</string>
    <string name="bt_precedent">Précedent</string>
    <string name="bt_valide">VALIDER</string>
    <string name="titre">Ecriture analytique</string>
    <string name="cr">CR</string>
    <string name="vehicule">Véhicule</string>
    <string name="bq">Banque</string>
    <string name="montant">Montant</string>
    <string name="afficher_montant">Afficher_montant</string>
    <string name="bton_annuler">ANNULER</string>
    <string name="bton_valider">VALIDER</string>
    <string name="date_op">Date</string>
    <string name="code_jnal">Journal</string>
    <string name="type_operation">Type d\'opération</string>
    <string name="tierssss">Tiers</string>
    <string name="annul">ANNULER</string>
    <string name="valid">SUIVANT</string>
    <string name="num_cpte_gen">libellé compte Général</string>
    <string name="num_cpt_g">N°compte</string>
    <string name="lib_cpte_ctrpartie">Libellé compte de contrepartie</string>
    <string name="num_compte">N°compte</string>
    <string name="bton_precedent">PRECEDENT</string>
    <string name="bton_suivant">SUIVANT</string>
</resources>
