<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lib_op"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:textColor="#00f"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montant_op"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textColor="#00f"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/editText11"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_piece"
        android:id="@+id/textView7"
        android:layout_below="@+id/editText10"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="42dp"
        android:textSize="20sp"
        android:textColor="#00f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText11"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numerisation"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/editText11"
        android:layout_toRightOf="@+id/editText11"
        android:layout_toEndOf="@+id/editText11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_doc"
        android:id="@+id/textView8"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="37dp"
        android:textColor="#00F"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText12"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_facture"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="47dp"
        android:textSize="20sp"
        android:textColor="#00f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText13"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/editText12"
        android:layout_alignEnd="@+id/editText12"
        android:layout_alignLeft="@+id/editText12"
        android:layout_alignStart="@+id/editText12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_precedent"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_valide"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignLeft="@+id/editText13"
        android:layout_alignStart="@+id/editText13"
        android:layout_alignRight="@+id/editText13"
        android:layout_alignEnd="@+id/editText13" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
