<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_cpte_gen"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="43dp"
        android:textSize="20sp"
        android:textColor="#00f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_alignRight="@+id/textView18"
        android:layout_alignEnd="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_cpt_g"
        android:id="@+id/textView17"
        android:textColor="#00f"
        android:textSize="20sp"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lib_cpte_ctrpartie"
        android:id="@+id/textView18"
        android:textSize="20sp"
        android:textColor="#00f"
        android:layout_below="@+id/editText19"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText20"
        android:layout_below="@+id/textView18"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_compte"
        android:id="@+id/textView19"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText19"
        android:layout_alignStart="@+id/editText19"
        android:textSize="20sp"
        android:textColor="#00f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText19"
        android:layout_below="@+id/textView17"
        android:layout_alignRight="@+id/textView17"
        android:layout_alignEnd="@+id/textView17"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText21"
        android:layout_below="@+id/textView19"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_alignRight="@+id/textView19"
        android:layout_alignEnd="@+id/textView19" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bton_precedent"
        android:id="@+id/button8"
        android:layout_below="@+id/editText21"
        android:layout_toLeftOf="@+id/editText21"
        android:layout_toStartOf="@+id/editText21"
        android:layout_marginTop="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bton_suivant"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_toRightOf="@+id/editText21"
        android:layout_toEndOf="@+id/editText21" />
</RelativeLayout>
