<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        android:id="@+id/textView10"
        android:textSize="20sp"
        android:textColor="#00f"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr"
        android:id="@+id/textView11"
        android:layout_marginTop="50dp"
        android:textColor="#00f"
        android:textSize="20sp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText14"
        android:layout_alignTop="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/editText3"
        android:layout_toEndOf="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicule"
        android:id="@+id/textView12"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:textColor="#00f"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText15"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText16"
        android:layout_alignTop="@+id/editText15"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editText14"
        android:layout_alignStart="@+id/editText14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bq"
        android:id="@+id/textView13"
        android:layout_below="@+id/editText15"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textColor="#00f" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText17"
        android:layout_alignBottom="@+id/textView13"
        android:layout_toRightOf="@+id/textView12"
        android:layout_alignRight="@+id/editText15"
        android:layout_alignEnd="@+id/editText15" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText18"
        android:layout_alignTop="@+id/editText17"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editText16"
        android:layout_alignStart="@+id/editText16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montant"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginTop="38dp"
        android:textSize="20sp"
        android:textColor="#00f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afficher_montant"
        android:id="@+id/textView15"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignLeft="@+id/editText17"
        android:layout_alignStart="@+id/editText17"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_alignTop="@+id/textView14"
        android:textSize="20sp"
        android:textColor="#00f" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bton_annuler"
        android:id="@+id/button6"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bton_valider"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button6"
        android:layout_alignRight="@+id/textView15"
        android:layout_alignEnd="@+id/textView15" />
</RelativeLayout>
